findInCache: Compare last modified to boot time if timestamp is 0

If the timestamp of files is 0 (or not passed to the findInCache
function), then compare the last modified time in the cache with the
time of boot instead.

This makes sure that the cache is updated only once per boot on systems
where the timestamp of files in `/usr` is set to the UNIX epoch (0),
such as ostree based systems like Fedora Kinoite.

Only apply this logic on Linux based systems for now.

BUG: 453876